[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-torch-utils"
version = "0.0.1"
description = "Generic, queue-based, multi-GPU PyTorch inference framework."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Cameron Arshadi"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "pytest",
  "torch",
  "pydantic",
  "psutil",
  "tensorstore",
  "numpy",
  "aind-exaspim-image-compression@git+https://github.com/AllenNeuralDynamics/aind-exaspim-image-compression.git@main",
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo'
]
extras = ['matplotlib']

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
